--- a/ClubConnect/static/css/admin.css
+++ b/ClubConnect/static/css/admin.css
@@ -11,6 +11,7 @@
 body{
     font-family: "Roboto", sans-serif;
 }
+/*Start Club Profile style */
 .bigger-profile{
   background-color: var(--dark-color);
   width: 100%;
@@ -212,6 +213,92 @@ body{
   background-color: transparent;
   border: solid 1px var(--ligh-color);
 }
+
+.event-posts-container{
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  position: relative;
+  top: 0;
+  left: 0;
+  min-height: 90vh;
+  margin-bottom: 30px;
+}
+.event-posts-slider{
+  width: 700px;
+  min-height: 20vw;
+  display: flex;
+  overflow: hidden;
+  border: solid 1px var(--dark-color);
+}
+.profile-post-card{
+  padding: 20px;
+  transition: .6s ease;
+}
+.profile-post-card img{
+  width: 660px;
+  height: 400px;
+}
+.profile-post-card .event-post-title{
+  margin-top: 12px;
+}
+.event-posts-container svg{
+  font-size: 3rem;
+  position: absolute;
+  color: var(--dark-color);
+  cursor: pointer;
+  z-index: 900;
+}
+.event-posts-container .fa-less-than{
+  left: 50px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.event-posts-container .fa-greater-than{
+  right: 50px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.edit-clubProfile-form{
+  background-color: var(--ligh-color);
+  width: 70vw;
+  height: 550px;
+  position: fixed;
+  top: 85%;
+  left: 50%;
+  transform: translate(-50%,-85%);
+  z-index: 900;
+  overflow: auto;
+  display: none;
+}
+
+.edit-club-infos{
+    justify-content: center !important;
+}
+#x-mark{
+    position: absolute;
+    right: 8px;
+    top: 10px;
+    font-size: 30px;
+    cursor: pointer;
+    z-index: 999;
+    color: var(--dark-color);
+}
+.blur2{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.769);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 500;
+    display: none;
+}
+#edit-confirm-blur{
+    z-index: 950 !important;
+}
+
+/* End Club Profile style */
 
  /* Start create new club style */
  .form-container{
@@ -661,53 +748,7 @@ padding: 10px 0;
   cursor: pointer;
 }
 /*End Admin Notification Style*/
-/*Start Event Posts In club Profile*/
-.event-posts-container{
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  position: relative;
-  top: 0;
-  left: 0;
-  min-height: 90vh;
-  margin-bottom: 30px;
-}
-.event-posts-slider{
-  width: 700px;
-  min-height: 20vw;
-  display: flex;
-  overflow: hidden;
-  border: solid 1px var(--dark-color);
-}
-.profile-post-card{
-  padding: 20px;
-  transition: .6s ease;
-}
-.profile-post-card img{
-  width: 660px;
-  height: 400px;
-}
-.profile-post-card .event-post-title{
-  margin-top: 12px;
-}
-.event-posts-container svg{
-  font-size: 3rem;
-  position: absolute;
-  color: var(--dark-color);
-  cursor: pointer;
-  z-index: 900;
-}
-.event-posts-container .fa-less-than{
-  left: 50px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.event-posts-container .fa-greater-than{
-  right: 50px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-/*End Event Posts In club Profile*/
+
 @media screen and (max-width: 1387px){
   .club-container .first-container{
       width: 59%;
@@ -846,6 +887,9 @@ padding: 10px 0;
     width: 510px;
     height: 250px;
   }
+  .edit-clubProfile-form{
+    width: 80vw;
+}
 
 }
 
@@ -867,6 +911,9 @@ padding: 10px 0;
   .profile-post-card{
       width: 100vw;
   }
+  .edit-clubProfile-form{
+    width: 90vw;
+}
   
 }
 
