--- a/templates/pages/sks-admin-interface/admin-notifications.html
+++ b/templates/pages/sks-admin-interface/admin-notifications.html
@@ -34,6 +34,8 @@
 
     <div class="all-features-container">
     <div class="notif-container">
+      <form method="post" action="">
+            {% csrf_token %}
         <div class="activities-notif-container">
             <h4>Event Activity Requests</h4>
             <div class="scroll-container">
@@ -50,10 +52,10 @@
                     {% if act.approved %}
                     <input class="accept-btn" type="checkbox" checked="
                     checked" value={{act.id}}
-                    named="boxes">
+                    name="boxes">
                     {% else %}
                     <input class="accept-btn" type="checkbox" value={{act.id}}
-                    named="boxes">
+                    name="boxes">
                     {% endif %}
 
                     <button class="accept-btn" onclick=""  type="button">Accept</button>
@@ -62,7 +64,12 @@
             </div>
             {% endfor %}
         </div>
+      </form>
+      <button class="accept-btn" name="update_activities"  type="submit">Update approval</button>
+
         </div>
+     <form method="post" action="">
+          {% csrf_token %}
         <div class="posts-notif-container">
             <h4>Event Post Requests</h4>
             <div class="scroll-container">
@@ -73,12 +80,24 @@
                 <img src="{% static 'images/hiking-club.jpg' %}" alt="club logo">
                 <div class="req-text"><strong class="club-name">{{post.clubname}}</strong> sent an event post request <span class="view-interface-btn">view</span></div>
                 <div class="decision-buttons">
+                    {% if post.approved %}
+                    <input class="accept-btn" type="checkbox" checked="
+                    checked" value={{post.id}}
+                    name="boxes">
+                    {% else %}
+                    <input class="accept-btn" type="checkbox" value={{post.id}}
+                    name="boxes">
+                    {% endif %}
                     <button class="accept-btn" type="button">Accept</button>
                     <button class="reject-btn" type="button">Reject</button>
                 </div>
             </div>
             {% endfor %}
-            </div>  
+            
+            </div> 
+        </form>
+        <button class="accept-btn" name="update_posts"  type="submit">Update approval</button>
+
         </div>
         <div class="edits-notif-container">
             <h4>Edit Event Requests</h4>
