--- a/templates/pages/all-users-interface/club-profile.html
+++ b/templates/pages/all-users-interface/club-profile.html
@@ -3,7 +3,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,6 +29,12 @@
         </div>
     </div>
     <div class="edit-clubProfile-form">
+        <i onclick="hideEditClubForm()" class="fa-solid fa-xmark" id="x-mark"></i>
+        <form class="edit-club-form" action="" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="edit-club-form-place">
+            <!-- edit club profile form in admin.js(line 40) -->
+        </div>
         
     </div>
 
@@ -127,7 +133,7 @@
                   
                   <div class="card-body">
                       <h5 class="card-title mt-5">{{EventActivity.eventtitle}}</h5>
-                      <p class="card-text text-black-50">{{EventActivity.description|truncatewords:20}}</p>
+                      <p class="card-text text-black-50">{{EventActivity.description|truncatewords:25}}</p>
                       <div class="info-list">
                           <a href="{% url 'eventPage' pk=EventActivity.id %}"><button type="button" class="main-btn more-info-btn">More Info</button></a>
                       </div>
@@ -153,22 +159,26 @@
         <div class="profile-post-card">
         <img src="{{ post.image.url }}">
         <h3 class="event-post-title">{{ post.eventtitle }}</h3>
-        <p class="event-post-description">{{ post.postdescription }}</p>
+        <p class="event-post-description">{{ post.postdescription}}</p>
        </div>
         {% endif %} 
        {% endfor %}
        </div>
        
        <i onclick="moveNext()" class="fa-solid fa-greater-than"></i>
+       <div class="bigger-post-container">
+        <!-- Bigger Post Goes Here -->
+      </div>
+
       </div>
       </div>
+      
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/all.min.js' %}"></script>
     <script src="{% static 'js/navbar.js' %}"></script>
     <script src="{% static 'js/admin.js' %}"></script>
     <script src="{% static 'js/script.js' %}"></script>
-    
 
 </body>
 </html>
