--- a/templates/pages/all-users-interface/event-page.html
+++ b/templates/pages/all-users-interface/event-page.html
@@ -59,7 +59,12 @@
     </div>
 
     <div class="edit-activity-container">
-         <!-- The edit activity Form goes here(script.js line 360) -->
+        <form class="edit-activity-form" action="" method="post" id="edit-event-activity-form" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="edit-activity-form-place">
+                <!-- The edit activity Form goes here(script.js line 360) -->
+            </div>
+         
     </div>
     
     <div class="event-activity-details-container">
@@ -112,7 +117,7 @@
                   
                   <div class="card-body">
                       <h5 class="card-title mt-5">{{EventActivity.eventtitle}}</h5>
-                      <p class="card-text text-black-50">{{EventActivity.description|truncatewords:20}}</p>
+                      <p class="card-text text-black-50">{{EventActivity.description|truncatewords:25}}</p>
                       <div class="info-list">
                           <a href="{% url 'eventPage' pk=EventActivity.id %}"><button type="button" class="main-btn more-info-btn">More Info</button></a>
                       </div>
@@ -127,8 +132,10 @@
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/all.min.js' %}"></script>
     <script src="{% static 'js/navbar.js' %}"></script>
-    <script src="{% static 'js/script.js' %}"></script>
     <script src="{% static 'js/manager.js' %}"></script>
+    <script>
+
+    </script>
     
 </body>
 </html>
