--- a/templates/pages/all-users-interface/event-page.html
+++ b/templates/pages/all-users-interface/event-page.html
@@ -20,7 +20,7 @@
     <div onclick="hideConfirmMessage()" class="blur" id="create-activity-blur"></div>
     <div class="confirm-message" id="activity-confirm-message">
         <h3>Confirm</h3>
-        <p>Are you sure you want to create a new club?</p>
+        <p>Are you sure you want to edit your event activity?</p>
         <div class="yes-no-buttons">
             <button onclick="hideConfirmMessage()" class="no-btn" type="button">No</button>
             <button onclick="editEventActivityForm.submit()" class="yes-btn" type="button">Yes</button>
@@ -132,10 +132,8 @@
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/all.min.js' %}"></script>
     <script src="{% static 'js/navbar.js' %}"></script>
+    <script src="{% static 'js/script.js' %}"></script>
     <script src="{% static 'js/manager.js' %}"></script>
-    <script>
-
-    </script>
     
 </body>
 </html>
