--- a/static/css/clubs-events.css
+++ b/static/css/clubs-events.css
@@ -526,6 +526,11 @@ a{
     flex-direction: column;
     align-items: center;
   }
+  .edit-activity-form-place{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
   .edit-activity-form #edit-activity-x-mark{
     position: absolute;
     top: 3px;
