--- a/templates/pages/sks-admin-interface/create-club-form.html
+++ b/templates/pages/sks-admin-interface/create-club-form.html
@@ -34,13 +34,13 @@
                 <label for="background-upload" class="custom-background-upload">
                     <i class="fas fa-cloud-upload-alt"></i> Choose A File
                 </label>
-                <input class="background-upload" name="profile_club" id="background-upload" type="file" required/>
+                <input class="background-upload" name="background_club" id="background-upload" type="file" required/>
                 <div class="profile-input">
                     <div onclick="profileUpload.click()" class="image-preview profile-preview" id="profile-preview"></div>
                     <label for="profile-upload" class="custom-profile-upload">
                         <i class="fas fa-cloud-upload-alt"></i>
                     </label>
-                    <input class="profile-upload" name="background_club" id="profile-upload" type="file" required/>
+                    <input class="profile-upload" name="profile_club" id="profile-upload" type="file" required/>
                 </div>
             </div>
 
@@ -93,157 +93,8 @@
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/all.min.js' %}"></script>
     <script src="{% static 'js/navbar.js' %}"></script>
-    <script>
-        const backgroundUpload = document.querySelector('.background-upload');
-const profileUpload = document.querySelector('.profile-upload');
-const backgroundPreview = document.querySelector('.bg-preview');
-const profilePreview = document.querySelector('.profile-preview');
-let backgroundContainer = document.querySelector('.image-upload-container');
-let profileContainer = document.querySelector('.profile-input');
-let phoneNum1 = document.querySelector('.phone1');
-let phoneNum2 = document.querySelector('.phone2');
-let clubDescriptionInput = document.querySelector('.club-description-input');
-let clubVisionInput = document.querySelector('.club-vision-input');
-let clubConfirmMessage = document.querySelector('.confirm-message');
-let clubBlur = document.querySelector('.blur');
-let clubEmail = document.querySelector('.club-email');
-let createClubForm = document.querySelector('.create-club-form');
-let editClubForm = document.querySelector('.edit-club-form');
-        function displayImagePreview(input, preview) {
-            const file = input.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function() {
-                    const imageDataURL = reader.result;
-                    const img = document.createElement('img');
-                    img.src = imageDataURL;
-                    preview.innerHTML = '';
-                    preview.appendChild(img);
-                    preview.style.display = 'block';
-                }
-                reader.readAsDataURL(file);
-            }
-          }
-          if(document.body.id === 'create new club' || document.body.id === 'club-profile'){
-          backgroundUpload.addEventListener('change', function() {
-            displayImagePreview(this, backgroundPreview);
-          });
-          
-          profileUpload.addEventListener('change', function() {
-            displayImagePreview(this, profilePreview);
-          });
-          }
-          
-          
-          function checkInputs(){
-                let clubInputs = document.querySelectorAll('.input-field');
-                let hasErrors = false;
-                for(let i = 0; i < clubInputs.length; i++){
-                    if(clubInputs[i].value.trim() === ''){
-                        clubInputs[i].classList.add('error-border');
-          ;                   hasErrors = true;
-                    }
-                    else{
-                        clubInputs[i].classList.remove('error-border');
-          
-                    }
-                }
-          
-                //bg input
-                if(backgroundUpload.value.trim() === ''){
-                    backgroundContainer.classList.add('error-border');
-                    hasErrors = true;
-                }
-                else{
-                    backgroundContainer.classList.remove('error-border');
-          
-                }
-                //profile input
-                if(profileUpload.value.trim() === ''){
-                    profileContainer.classList.add('error-border');
-                    hasErrors = true;
-                }
-                else{
-                    profileContainer.classList.remove('error-border');
-          
-                }
-          
-                
-            let phoneError1 = document.querySelector('.phone-error1');
-            let phoneError2 = document.querySelector('.phone-error2');
-            let numberReg = /^\+\d{2}(\s?\d){10}$/;
-            //phone number 1 input
-            if(!phoneNum1.value.match(numberReg) && phoneNum1.value.trim() !== ''){
-                phoneError1.style.display = 'block';
-                hasErrors = true;
-            }
-            else{
-                phoneError1.style.display = 'none';
-            }
-            //phone number 2 input
-            if(!phoneNum2.value.match(numberReg) && phoneNum2.value.trim() !== ''){
-                phoneError2.style.display = 'block';
-                hasErrors = true;
-            }
-            else{
-                phoneError2.style.display = 'none';
-            }
-          
-            //Email input
-            let emailReg = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-            let emailError = document.querySelector('.email-error');
-            if(!clubEmail.value.match(emailReg) && clubEmail.value.trim() !== ''){
-                emailError.style.display = 'block';
-                hasErrors = true;
-            }
-           else{
-                emailError.style.display = 'none';
-            }
-          
-            //Description input
-            let descriptionError = document.querySelector('.description-error');
-            descInputValue = clubDescriptionInput.value.trim();
-            if(descInputValue.length >= 300 && descInputValue.length <= 4000){
-                descriptionError.style.display = 'none';
-            }
-            else if(descInputValue !== ''){
-                descriptionError.style.display = 'block';
-                hasErrors = true;
-            }
-            //Vision input
-            let visionError = document.querySelector('.vision-error');
-            visionInputValue = clubVisionInput.value.trim();
-            if(visionInputValue.length >= 200 && visionInputValue.length <= 3000 && visionInputValue !== ''){
-                visionError.style.display = 'none';
-            }
-            else if(visionInputValue !== ''){
-                visionError.style.display = 'block';
-                hasErrors = true;
-            }
-          
-            return hasErrors
-            }
-          
-          
-          function showConfirmMessage(){
-            clubConfirmMessage.style.top = '70px';
-            clubBlur.style.display = 'block';
-          }
-          
-          function checkAndConfirm() {
-          
-            let hasErrors = checkInputs();
-          
-            if (!hasErrors) {
-                showConfirmMessage();
-            }
-          }
-          
-          function hideConfirmMessage(){
-            clubConfirmMessage.style.top = '-100%';
-            clubBlur.style.display = 'none';
-          }
-    </script>
+    <script src="{% static 'js/admin.js' %}"></script>
+    
 </body>
 </html>
 {% endblock content %}
